correction d'un alignement du bloc annonce et petite remise en forme de la feuille css
git-svn-id: svn://zone.spip.org/spip-zone/_squelettes_@55129 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/escal/styles/general.css
+++ b/escal/styles/general.css
@@ -395,6 +395,7 @@ div.texte .spip_logos {
 /* habillage spécifiques à certaines noisettes */
 /***********************************************/
 /* formulaire recherche */
+/************************/
 .formulaire_recherche label {
 	font-size: 12px;
 }
@@ -403,6 +404,7 @@ div.texte .spip_logos {
 	background: url(../images/loupe.gif) no-repeat;
 }
 /* noisette inc-identification */
+/*******************************/
 .formulaire_login .spip_logos {
 	float: right;
 }
@@ -430,6 +432,7 @@ div#liensilogue a {
 	font-weight: bold;
 }
 /* drapeaux du menu de langues */
+/*******************************/
 #drapeau{
   float: right;
   margin : 0 50px 0 0;
@@ -439,12 +442,14 @@ div#liensilogue a {
   margin : 0 20px 0 0;
 }
 /* noisette inc-acces_direct */
+/*****************************/
 .texte#acces-direct {
 	font-size: 12px;
 	font-weight: bold;
 	padding-left: 20px;
 }
 /* noisette inc-evenements */
+/***************************/
 .texte#evenements ul {
 	padding-left: 10px;
 	margin: 0;
@@ -462,6 +467,7 @@ div#liensilogue a {
 	padding-left: 20px;
 }
 /* noisette inc-nav_mots */
+/*************************/
 .titre-groupe{
 	margin: 5px 0px 5px 5px;
 	font-size: 12px;
@@ -474,8 +480,8 @@ div#liensilogue a {
 	padding-left: 20px;
 	margin-bottom: 3px;
 }
-
 /* noisette inc-stats */
+/**********************/
 .texte#stats ul {
 	padding-left: 10px;
 	margin: 0;
@@ -492,6 +498,7 @@ div#liensilogue a {
 	padding-left: 20px;
 }
 /* noisette inc-top */
+/********************/
 .texte#top5 ul {
 	padding-left: 10px;
 	margin: 0;
@@ -508,6 +515,7 @@ div#liensilogue a {
 	margin-left: 80px;
 }
 /* cadre sur le web */
+/********************/
 .titre-site {
 	font-size: 12px;
 	font-weight: bold;
@@ -523,6 +531,7 @@ div#liensilogue a {
 	list-style: square;
 }
 /* noisette inc-actus */
+/**********************/
 #scrollup {
 	position: relative;
 	overflow: hidden;
@@ -539,6 +548,7 @@ div#liensilogue a {
   font-weight: normal;
 }
 /* noisette inc-photos */
+/***********************/
 #scrollup2 {
 	position: relative;
 	overflow: hidden;
@@ -550,13 +560,11 @@ div#liensilogue a {
 	position: absolute;
 	top: 140px;
 }
-  
 #formulaire-auteur{
   text-align: left;
 }
-/*********************************/
-/*    encart annonce a la une    */
-/*********************************/
+/* encart annonce a la une */
+/***************************/
 .annonce {
 	background-color: #EC7942;
 	font-size: 14px;
@@ -564,6 +572,7 @@ div#liensilogue a {
 	color: white;
 	margin: 0 0 15px 0;
 	border-radius: 15px;
+	text-align: left;
 }
 .annonce p {
 	margin: 0;
